# estat-mcp

./: .gitignore  Dockerfile  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/estat_mcp/: __init__.py  cli.py  client.py  models.py  server.py
tests/: conftest.py  test_cli.py  test_client.py  test_models.py  test_pagination.py
