[project]
name = "estat-mcp"
version = "0.1.0"
description = "e-Stat API client and MCP server for Japanese government statistics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["estat", "e-stat", "mcp", "statistics", "japan", "government-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastmcp>=2.0,<3.0",
    "click>=8.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
estat-mcp = "estat_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/estat-mcp"
Repository = "https://github.com/ajtgjmdjp/estat-mcp"
Issues = "https://github.com/ajtgjmdjp/estat-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".mcpregistry_*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/estat_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["estat_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["estat_mcp"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
